@@ -862,6 +862,10 @@ $out: OutputPage object
 &$cookies: array of cookies name, add a value to it if you want to add a cookie
 	that have to vary cache options
 
+'GetDefaultSortkey': Override the default sortkey for a page.
+$title: Title object that we need to get a sortkey for
+&$sortkey: Sortkey to use.
+
 'GetFullURL': modify fully-qualified URLs used in redirects/export/offsite data
 $title: Title object of page
 $url: string value as output (out parameter, can modify)
